# WordRacing

./: CMakeLists.txt
src/: Storage.cpp  Storage.hpp  main.cpp
src/data/: Const.hpp  Dictionary.cpp  Dictionary.hpp  Language.cpp  Language.hpp  Serializable.cpp  Serializable.hpp  Type.hpp  Word.cpp  Word.hpp
src/ui/: dictionary.qml  learning_menu.qml  main.qml  start_menu.qml
src/ui/learning/: help.qml  new_words.qml  repeat.qml
